--- a/co-prime.ipynb
+++ b/co-prime.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8eVsiahdSEqCnRczXZTMf",
+      "authorship_tag": "ABX9TyOxwwK8PT9Y7yWQRqrQsWyo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,43 @@
       "cell_type": "code",
       "metadata": {
         "id": "sbg95xKbtRP0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import sympy\n",
+        "import cv2\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import math\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.style.use('dark_background')"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EJa_V_eLM910",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def gcd(p,q):\n",
+        "    while q != 0:\n",
+        "        p, q = q, p%q\n",
+        "    return p\n",
+        "def is_coprime(x, y):\n",
+        "    return gcd(x, y) == 1"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oJ_hC6_BNGrp",
         "colab_type": "code",
         "colab": {}
       },
